--- a/pytest.ini
+++ b/pytest.ini
@@ -3,3 +3,14 @@
 python_files = *_tests.py test_*.py   # Устанавливает правила для тестовых файлов
 python_classes = Test*               # Устанавливает правила для имен классов
 python_functions = test_*            # Устанавливает правила для имен функций
+
+# Регистрируем кастомные маркировки
+markers =
+    regression: Маркировка для регрессионных тестов.
+    registration: Маркировка для тестов, связанных с регистрацией пользователей.
+    authorization: Маркировка для тестов, связанных с авторизацией пользователей.
+    slow: Маркировка для медленных тестов.
+    integration: Маркировка для интеграционных тестов.
+    smoke: Маркировка для критических тестов.
+    courses: Маркировка для тестов, связанных с курсами.
+    regression: Маркировка для регрессионных тестов.
